[package]
name = "poc-framework"
version = "0.2.1"
authors = []
edition = "2021"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["solana", "smart", "contracts"]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.3"
bincode = "1.3.3"
rand = "0.7.3"
borsh = "0.9.3"
solana-sdk = "=1.11.5"
solana-program = "=1.11.5"
solana-logger = "=1.11.5"
solana-runtime = "=1.11.5"
solana-transaction-status = "=1.11.5"
solana-cli-output = "=1.11.5"
solana-bpf-loader-program = "=1.11.5"
solana-compute-budget-program = "=1.11.5"
solana-vote-program = "=1.11.5"
solana-stake-program = "=1.11.5"
solana-config-program = "=1.11.5"
solana-client = "=1.11.5"
solana-faucet = "=1.11.5"
spl-token = "3.3.0"
spl-memo = "3.0.1"
spl-associated-token-account = "1.0.5"
serde = "1.0.142"
sha2 = "0.10.2"
libsecp256k1 = "0.7.1"
sha3 = "0.10.2"
hex = "0.4.3"
once_cell = "1.13.0"

[dev-dependencies]
solana-program-runtime = "=1.11.5"
