[package]
name = "poc-framework"
version = "0.3.1"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [ "solana", "smart", "contracts",]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
borsh = "0.9.1"
solana-sdk = "=1.17.17"
solana-program = "=1.17.17"
solana-logger = "=1.17.17"
solana-runtime = "=1.17.17"
solana-transaction-status = "=1.17.17"
solana-cli-output = "=1.17.17"
solana-bpf-loader-program = "=1.17.17"
solana-compute-budget-program = "=1.17.17"
solana-vote-program = "=1.17.17"
solana-stake-program = "=1.17.17"
solana-config-program = "=1.17.17"
solana-client = "=1.17.17"
solana-faucet = "=1.17.17"
solana-program-runtime = "=1.17.17"
solana-ledger = "=1.17.17"
solana-accounts-db = "=1.17.17"
spl-token = "3.3.0"
spl-token-2022 = "1.0.0"
spl-memo = "3.0.1"
spl-associated-token-account = "1.0.5"
serde = "1.0.125"
sha2 = "0.10.2"
libsecp256k1 = "0.7.1"
sha3 = "0.10.0"
hex = "0.4.3"
once_cell = "1.9.0"
