[package]
name = "poc-framework"
version = "0.3.0"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [ "solana", "smart", "contracts",]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
tempfile = "3.2.0"
borsh = "0.9.1"
solana-sdk = "~2.2"
solana-program = "~2.2"
solana-logger = "~2.2"
solana-runtime = {version = "~2.2", features = ["dev-context-only-utils"]}
solana-transaction-status = "~2.2"
solana-cli-output = "~2.2"
solana-accounts-db = "~2.2"
solana-client = "~2.2"
solana-program-runtime = "~2.2"
solana-ledger = "~2.2"
solana-svm = "~2.2"
spl-token-2022 = "8.0.0"
spl-token = "8.0.0"
spl-memo = "6.0.0"
spl-associated-token-account = "6.0.0"
serde = "1.0.219"
sha2 = "0.10.2"
once_cell = "1.9.0"
